tests/config_munging_underscores/config_munging_underscores.exp
Error --------------------------------------------------- commonjs_import.js:3:9

Error: commonjs_import.js:3
  3: import {_p} from "./commonjs_export";
             ^^ Cannot import `_p` because there is no `_p` export in `./commonjs_export`.


Found 1 error
